# d-ral-model-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: d-ral-model-build.yml  d-ral-model-release.yml
app/: CMakeLists.txt
app/direct/: CMakeLists.txt
app/direct/src/: main.cpp
app/indirect/: CMakeLists.txt
app/indirect/src/: main.cpp
app/model/: CMakeLists.txt
app/model/src/: main.cpp
app/read/src/: main.cpp
app/stm32f411/: CMakeLists.txt
app/stm32f411/src/: main.cpp
cmake/cpack/: ArchiveConfig.cmake
cmake/modules/: DralUtils.cmake  ProjectSettings.cmake
cmake/toolchain/: armv7m.cmake  cortex-m3.cmake  cortex-m4.cmake  stm32f429.cmake
crt/: CMakeLists.txt
crt/cortex-m3/: CMakeLists.txt  handlers.cpp  linker_script.ld
crt/cortex-m4/: linker_script.ld  startup.cpp
docker/: Dockerfile
dral/: CMakeLists.txt
dral/app/read/: CMakeLists.txt
dral/crt/: CMakeLists.txt
dral/crt/cortex-m4/: CMakeLists.txt  linker_script.ld
dral/crt/stm32f429/: CMakeLists.txt  linker_script.ld  startup.s
model/: CMakeLists.txt
model/inc/dral/: access_type.h  bitfield_model.h  field_model.h  field_model_traits.h  group_address_policy.h  layer_offset_policy.h  mask_policy.h  register_model.h  register_model_traits.h  register_value.h  utilities.h
regs/: CMakeLists.txt
regs/direct/regs/: alfa.h  bravo.h  charlie.h  delta_x.h  echo_x.h
regs/inc/regs/: alfa.h  bravo.h  charlie.h  delta_x.h  echo_x.h
regs/indirect/regs/: alfa.h  bravo.h  charlie.h  delta_x.h  echo_x.h
regs/stm32f411/: CMakeLists.txt
regs/stm32f411/inc/stm32f411/: adc1.h  adc_common.h  crc.h  dbg.h  dma_x.h  exti.h  flash.h  fpu.h  fpu_cpacr.h  gpio_x.h  i2c_x.h  i2s2ext.h  i2s3ext.h  iwdg.h  mpu.h  nvic.h  nvic_stir.h  otg_fs_device.h  otg_fs_global.h  otg_fs_host.h  otg_fs_pwrclk.h  pwr.h  rcc.h  rtc.h  scb.h  scb_actrl.h  sdio.h  spi_x.h  stk.h  syscfg.h  tim10.h  tim11.h  tim2.h  tim5.h  tim9.h  tim_x.h  usart_x.h  wwdg.h
renode/scripts/: read.resc
tests/: assembly.robot  disassembly.robot  emulation.robot  read.robot  requirements.txt
tests/data/disassembly/cortex-m3/: direct_group_register_read_using_register_value_type.txt  direct_group_register_write_using_register_value_type.txt  direct_iterate_over_group_register.txt  direct_register_write_using_register_value_type.txt  direct_simple_field_read.txt  direct_simple_field_write.txt  direct_simple_group_register_write.txt  direct_simple_register_read.txt  indirect_group_register_read_using_register_value_type.txt  indirect_group_register_write_using_register_value_type.txt  indirect_iterate_over_group_register.txt  indirect_register_value_type_access.txt  indirect_simple_group_register_read.txt  indirect_simple_group_register_write.txt
tests/data/disassembly/cortex-m4/: direct_group_register_read_using_register_value_type.txt  direct_iterate_over_group_register.txt  direct_register_read_using_register_value_type.txt  direct_register_value_type_access.txt  direct_simple_group_register_read.txt  direct_simple_group_register_write.txt  direct_simple_register_write.txt  indirect_iterate_over_group_register.txt  indirect_register_read_using_register_value_type.txt  indirect_register_write_using_register_value_type.txt  indirect_simple_field_read.txt
tests/data/memdump/: dral_memory.hex
tests/libraries/: Assembly.py  Emulation.py
tests/resources/: assembly.resource  emulation.resource  project.resource
utils/: disassemble.py  hexdump.py  memdump.py  renode.py  requirements.txt
